--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grupo 1</title>
+    <title>Academia Fila 1</title>
 </head>
 <body>
-    <h1>Grupo 1: DIW</h1>
+    <h1></h1>
 </body>
 </html>
