--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <title>Academia Fila 1</title>
 </head>
 <body>
     <h1></h1>
+    <div class="container">
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel" data-slide-to="1"></li>
+              <li data-target="#carousel" data-slide-to="2"></li>
+              <li data-target="#carousel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/eso.jpg" width="100%" height="550px" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Estudios que ofrecemos</h5>
+                    <p>ESO</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                <img class="d-block w-100" src="images/instituto.jpg" width="100%" height="550px" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Estudios que ofrecemos</h5>
+                    <p>Bachiller</p>
+                </div>
+                </div>
+                <div class="carousel-item">
+                <img class="d-block w-100" src="images/ciclos.jpg" width="100%" height="550px" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                        <h5>Estudios que ofrecemos</h5>
+                        <p>Ciclos formativos</p>
+                </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/uni.jpg" width="100%" height="550px" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Estudios que ofrecemos</h5>
+                        <p>Estudios universitarios</p>
+                    </div>
+                </div>
+                </div>
+            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+            </div>
+            </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
