--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="images/eso.jpg" width="100%" height="550px" alt="">
+                <img class="d-block w-100" src="media/eso.jpg" width="100%" height="550px" alt="">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Estudios que ofrecemos</h5>
                     <p>ESO</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                <img class="d-block w-100" src="images/instituto.jpg" width="100%" height="550px" alt="">
+                <img class="d-block w-100" src="media/instituto.jpg" width="100%" height="550px" alt="">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Estudios que ofrecemos</h5>
                     <p>Bachiller</p>
                 </div>
                 </div>
                 <div class="carousel-item">
-                <img class="d-block w-100" src="images/ciclos.jpg" width="100%" height="550px" alt="">
+                <img class="d-block w-100" src="media/ciclos.jpg" width="100%" height="550px" alt="">
                 <div class="carousel-caption d-none d-md-block">
                         <h5>Estudios que ofrecemos</h5>
                         <p>Ciclos formativos</p>
                 </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/uni.jpg" width="100%" height="550px" alt="">
+                    <img class="d-block w-100" src="media/uni.jpg" width="100%" height="550px" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Estudios que ofrecemos</h5>
                         <p>Estudios universitarios</p>
@@ -48,11 +48,11 @@
                 </div>
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+              <span class="sr-only">Anterior</span>
             </a>
             <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+              <span class="sr-only">Siguiente</span>
             </a>
             </div>
             </div>
